2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Fix the text we send not being echo'ed back in the UI

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Init the i18n functions

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Don't escape the data coming from telepathy itself

	* telepathy/main.c: (main): And init i18n

	* libgsm/Makefile.am:
	* libgsm/glibgsmtest.c: (main): more i18n

	* libgsm/phonemgr-listener.c: (phonemgr_listener_poll): add some
	accents to the test messages sent

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/sms.profile: Add a profile file for empathy, to be
	copied to /usr/share/mission-control/profiles/ (doesn't actually work)

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* telepathy/*: Rename the backend "Phoney", as in "phone", haha,
	and add the telepathy manager file, as well as the D-Bus service
	file, so it gets autostarted and discovered properly

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_address_is),
	(phonemgr_utils_get_channel), (phonemgr_utils_tell_driver),
	(phonemgr_utils_write_gnokii_config),
	(phonemgr_utils_connection_is_supported):
	Add support for DKU2 in --config and --identify, check better
	for Bluetooth addresses using bachk, remove support for DKU2
	in kernel driver mode
	* libgsm/phones.xml: Add the 6230i to the list, as used in
	the Nokia 6230i in DKU2 mode

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (main): Add commented test for dku2 USB cables
	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect):
	* libgsm/phonemgr-utils.c: (phonemgr_utils_address_is),
	(phonemgr_utils_write_config), (phonemgr_utils_driver_for_model),
	(phonemgr_utils_driver_for_device), (phonemgr_utils_connect):
	* libgsm/phonemgr-utils.h: Support DKU2 USB cables for Nokia phones,
	no UI for it yet though

2007-11-08  Bastien Nocera  <hadess@hadess.net>
